# Touch-Mii-Controller

./: CMakeLists.txt  README.md
include/: touchpad.hpp
src/: joybus.cpp  main.cpp  touchpad.cpp
